Bug 332470 - multiple websites per contact
Summary: multiple websites per contact
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.12.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-23 09:12 UTC by Bernhard Scheirle
Modified: 2015-02-04 20:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12.3
Sentry Crash Report:


Attachments
Test contact (81 bytes, text/vcard)
2014-03-23 09:13 UTC, Bernhard Scheirle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Scheirle 2014-03-23 09:12:08 UTC
It is not possible for one contact to have multiple website entries (like emails or im).

Worse, not only you can not enter multiple websites, but kaddressbook also removes them (except one) if you sync your contacts with an external service (like owncloud), where it is possible to have multiple website entries.

Reproducible: Always

Steps to Reproduce:
1. Import the Url_Test.vcf (Contains already two url fields.)
2. Try to add a third website (impossible)
3. Export the current imported contact (vCard 3.0)
Actual Results:  
In the exported vcf file there is only one url field.

Expected Results:  
In the exported vcf file should be three url fields. Or at least two so there is no data loss.
Comment 1 Bernhard Scheirle 2014-03-23 09:13:15 UTC
Created attachment 85699 [details]
Test contact
Comment 2 Laurent Montel 2014-03-23 12:22:03 UTC
I confirm it.
Comment 3 Laurent Montel 2015-02-04 20:50:55 UTC
Git commit 9ae69ccdbcbc0cfed6740235af9938ef1cc9ebbb by Montel Laurent.
Committed on 04/02/2015 at 20:49.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 332470 - multiple websites per contact

FIXED-IN: 14.12.3

M  +24   -1    kabc/addressee.cpp
M  +3    -0    kabc/addressee.h

http://commits.kde.org/kdepimlibs/9ae69ccdbcbc0cfed6740235af9938ef1cc9ebbb