Fix Bug 332470 - multiple websites per contact

FIXED-IN: 14.12.3
BUG: 332470